Replace '~' by homedir-path before doing the filename expansion Don't the wav-files when using "Encode File"

BUG: 115217
BUG: 119656

svn path=/branches/KDE/3.5/kdemultimedia/kaudiocreator/; revision=602728